tests/paczka1/fuzzy1/21543258.err
Error in line 17: UfxPfTG7b S56 54,3
Error in line 22: UfxPfTG7b SB1B BB,2
Error in line 23: M0v8VGwO0tA S56 61,0
Error in line 24: S110 S110 15,1
Error in line 15: qxU S56 5,4
